--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ p {
   color: #721C24;
   font-size: large;
   font-weight: 600;
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 #copy-button {
@@ -213,13 +213,13 @@ p {
   top:8px; right: 8px; 
   /* --bs-btn-padding-x: 0.25rem;  */
   z-index: 2; 
-  width:32.219px; 
-  height:32.219px; 
+  width:34.219px; 
+  height:34.219px; 
   color: #ffffff;  
   background-color: #666666; 
   border-color: #666666;
   border-radius: 3;
-  border-width: 2;
+  border-width: 1;
   box-shadow: 0px 2px 4px #d6d6d6;
 }
 
