--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,22 @@ h3 {
   margin-bottom: 12px;
 }
 
+@media screen and (max-width: 768px) {
+  h3 {
+    font-size: calc(1.8rem + .3vw);
+  }
+}
+
+@media screen and (max-width: 432px) {
+  h3 {
+    font-size: calc(1.4rem + .3vw);
+  }
+  .subtitle {
+    font-size: 1rem;
+    margin-bottom: 12px;
+  }
+}
+
 @media screen and (max-width: 340px) {
   h3 {
     font-size: calc(1.3rem + .3vw);
